<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <TextView
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="@string/password_first_title"/>
  <EditText
  android:id="@+id/password_first"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"/>
  <TextView
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="@string/password_second_title"/>
  <EditText
  android:id="@+id/password_second"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"/>
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal">
  <CheckBox
  android:id="@+id/check_box"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/password_show"/>
  <Button
  android:id="@+id/btn_ok"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/ok"/>
  <Button
  android:id="@+id/btn_cancel"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/cancel"/>
  </LinearLayout>
</LinearLayout>
